feat: add creator mock
