# service/common-api/domain/model/creator.go
@@ -1,0 +1,9 @@
+package model
+
+type Creator struct {
+	ID       string
+	Name     string
+	Channels Channels
+}
+
+type Creators []*Creator
